syntax = "proto3";

package ethereum.testing;

message TestMessage {
    string foo = 1;
}

// Used in shared/p2p/feed_example_test.go
message Puzzle {
    string challenge = 1;
    string answer = 2;
}